Update Model Deployment guidelines

--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -3695,32 +3695,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "# **MODEL DEPLOYMENT GUIDE** \n",
     "\n",
-    "# **MODEL DEPLOYMENT**\n",
+    "## **1. Save the Model and Preprocessing Pipeline**  \n",
+    "Train the **best model** and save it along with the preprocessing pipeline (e.g., encoding, scaling) using **pickle** to enable easy loading for predictions.\n",
     "\n",
-    "#  **Steps of Model Deployment**\n",
+    "## **2. Install Dependencies**  \n",
+    "Install **Flask** as the web framework to:  \n",
+    "- Serve the model  \n",
+    "- Handle form submissions  \n",
+    "- Render dynamic HTML templates  \n",
     "\n",
-    "\n",
-    "\n",
-    "## **1. Pickle the Encoder, Pipeline, and Model**\n",
-    "Train the **Random Forest Model** and pickle it along with the encoder and preprocessing pipeline to enable easy loading for predictions.\n",
-    "\n",
-    "## **2. Install Dependencies**\n",
-    "Install Flask as the web framework to:  \n",
-    "- Create routes  \n",
-    "- Handle form data  \n",
-    "- Render HTML templates  \n",
-    "\n",
-    "## **3. Organize Project Folder**  \n",
-    "Structure the project directory as follows for clarity and simplicity:  \n",
+    "## **3. Organize Project Structure**  \n",
+    "Follow a **clear directory structure** for better maintainability:  \n",
     "```\n",
     "Deployment/\n",
-    "├── app.py                     # Flask app\n",
-    "├── diabetes_model.pkl         # Pickle encoder, model and/or pipeline\n",
-    "├── templates/\n",
+    "├── app.py                                                                      # Flask app (backend)\n",
+    "├── diabetes_model.pkl         # Pickle encoder, model and/or pipeline                      (backend)\n",
+    "├── templates/                                                                              # (front end)\n",
     "│   └── homepage.html          # Main HTML page with input form and results\n",
-    "├── static/\n",
+    "├── static/                                                                                 # (front end)\n",
     "│   ├── css/\n",
     "│   │   └── styles.css         # Styles for the web app\n",
     "│   └── images/\n",
@@ -3728,81 +3722,70 @@
     "│       └── diabetes_chart.png # Visualizations (if needed)\n",
     "\n",
     "```\n",
-    "## **4. Set Up the Flask App**  \n",
-    "Create a **Flask app (`app.py`)** with the following routes:  \n",
     "\n",
-    "- **Home (`/`)**: Render `homepage.html` for user input.  \n",
-    "- **Prediction (`/predict`)**: Accept user input, process it, and return a prediction.  \n",
     "\n",
-    "## **5. Create HTML Template**\n",
-    "Build `templates/homepage.html` to:  \n",
-    "- Collect user input through a form.  \n",
-    "- Display the prediction result below the form.  \n",
+    "## **4. Develop the Flask App (`app.py`)**  \n",
+    "Create a **Flask application** with the following key routes:  \n",
     "\n",
-    "## **6. Style the UI**\n",
-    "Use **CSS** (`static/css/styles.css`) to:  \n",
-    "- Set up a **background and header image** (`background.jpg`).  \n",
-    "- Arrange form elements for a **clean layout**.  \n",
-    "- Apply **buttons and hover effects** for better UX.  \n",
+    "- **Home (`/`)** → Renders `homepage.html` where users input data  \n",
+    "- **Predict (`/predict`)** → Processes input data, makes a prediction, and returns results  \n",
     "\n",
-    "## **7. Load the Pickled Model**\n",
-    "Load the trained **Random Forest Model**, preprocessing pipeline, and encoder from `diabetes_model.pkl`.\n",
+    "## **5. Build the HTML Interface**  \n",
+    "Design `homepage.html` to:  \n",
+    "- Provide a simple **form for user input**  \n",
+    "- Display the **predicted result** dynamically  \n",
     "\n",
-    "## **8. Handle Predictions**\n",
-    "- Collect form data.  \n",
-    "- Preprocess inputs using the saved pipeline.  \n",
-    "- Make a prediction using the model.  \n",
-    "- Display the result on the page.  \n",
+    "## **6. Apply Styling (CSS)**  \n",
+    "Enhance user experience with **`static/css/styles.css`**:  \n",
+    "- Set a **background image (`background.jpg`)**  \n",
+    "- Ensure a **clean and user-friendly layout**  \n",
+    "- Style **buttons and input fields** for better UX  \n",
     "\n",
-    "## **9. Deploy the Flask App**\n",
-    "Run the Flask app locally and deploy it using a cloud platform like **Render** or **Heroku**.\n",
+    "## **7. Load and Use the Pickled Model**  \n",
+    "- Load `diabetes_model.pkl` inside `app.py`  \n",
+    "- Ensure the **same preprocessing pipeline** (e.g., encoding, scaling) is applied to user input before making predictions  \n",
+    "\n",
+    "## **8. Handle Predictions**  \n",
+    "- Extract user input from the form  \n",
+    "- Convert input into a **DataFrame** for model compatibility  \n",
+    "- Pass the data through the **trained pipeline** for transformation  \n",
+    "- Predict the diabetes readmission status and return the result  \n",
+    "\n",
+    "## **9. Run and Deploy the Flask App**  \n",
+    "- Test the app **locally** (`python app.py`)  \n",
+    "- Deploy it on a cloud service like **Render, Heroku, or AWS** for public access  \n",
     "\n",
     "---\n",
     "\n",
-    "### **Project Workflow Summary**\n",
+    "## **Project Workflow Summary**  \n",
     "\n",
-    "1. **Train the Model** → Pickle it  \n",
-    "2. **Set Up Flask App** → Load model, create routes  \n",
-    "3. **Design HTML Form** → Collect user inputs  \n",
-    "4. **Make Predictions** → Display results  \n",
-    "5. **Deploy** → Ensure accessibility  \n",
+    "1. **Train & Save Model** → Serialize the best model and preprocessing pipeline  \n",
+    "2. **Set Up Flask App** → Load model, create routes, handle user input  \n",
+    "3. **Develop Frontend** → HTML form for data entry & results  \n",
+    "4. **Make Predictions** → Process input, run the model, display output  \n",
+    "5. **Deploy** → Host the app online for real-world usage  \n",
     "\n",
-    "Follow these steps to efficiently deploy the **Diabetes Readmission Prediction Model**. 🚀"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "---\n",
     "\n",
-    "### File Descriptions\n",
+    "## **File Descriptions**  \n",
     "\n",
-    "- **app.py**  \n",
-    "  - The main Flask application that handles routing, loads the trained model, processes user input, and returns predictions.  \n",
+    "### **Backend**  \n",
+    "- **`app.py`**  \n",
+    "  - Main Flask application handling routing, form submissions, and predictions  \n",
+    "- **`diabetes_model.pkl`**  \n",
+    "  - Pickled machine learning model with preprocessing steps for consistent predictions  \n",
     "\n",
-    "- **diabetes_model.pkl**  \n",
-    "  - A serialized (pickled) file containing the trained machine learning model along with preprocessing steps (e.g., encoding, scaling) for making predictions.  \n",
+    "### **Frontend**  \n",
+    "- **`templates/homepage.html`**  \n",
+    "  - User interface for input collection and displaying prediction results  \n",
+    "- **`static/css/styles.css`**  \n",
+    "  - CSS file for styling the web application  \n",
+    "- **`static/images/`**  \n",
+    "  - Stores UI assets like:  \n",
+    "  - **`background.jpg`** → Background image for aesthetics  \n",
+    "  - **`diabetes_chart.png`** → Optional visualization (e.g., model performance or trends)  \n",
     "\n",
-    "- **templates/**  \n",
-    "  - This folder contains HTML templates for rendering the web pages.  \n",
-    "\n",
-    "  - **homepage.html**  \n",
-    "    - The main interface where users enter input data for diabetes readmission prediction and view the results.  \n",
-    "\n",
-    "- **static/**  \n",
-    "  - This directory holds static assets like stylesheets and images.  \n",
-    "\n",
-    "  - **css/styles.css**  \n",
-    "    - Defines the styling and layout of the web application for better user experience.  \n",
-    "\n",
-    "  - **images/**  \n",
-    "    - Stores images used in the app, such as background visuals and charts.  \n",
-    "\n",
-    "    - **background.jpg**  \n",
-    "      - A background image to enhance the UI aesthetics.  \n",
-    "\n",
-    "    - **diabetes_chart.png**  \n",
-    "      - A visualization (e.g., a graph showing diabetes trends or model performance) that might be displayed on the webpage.  \n"
+    "Follow these steps to successfully deploy your **Diabetes Readmission Prediction Model**. 🚀\n"
    ]
   },
   {
