Update Model Deployment guidelines

--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -3785,7 +3785,7 @@
     "  - **`background.jpg`** → Background image for aesthetics  \n",
     "  - **`diabetes_chart.png`** → Optional visualization (e.g., model performance or trends)  \n",
     "\n",
-    "Follow these steps to successfully deploy your **Diabetes Readmission Prediction Model**. 🚀\n"
+    "Follow these steps to successfully deploy your  Prediction Model. \n"
    ]
   },
   {
