Update Model Deployment guidelines

--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -3789,6 +3789,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# THINGS TO NOTE WHILE PICKLING AND HANDLING DATA \n",
+    "\n",
+    "## **1. Pickling the Model and Preprocessing Pipeline**  \n",
+    "Pickling is the process of **serializing and saving Python objects** (such as models, encoders, and pipelines) into a file. This ensures that the trained model and its preprocessing steps can be **reloaded** later without retraining.  \n",
+    "\n",
+    "### **Steps for Pickling:**  \n",
+    "1. Train the best model and finalize preprocessing steps (e.g., encoding, scaling).  \n",
+    "2. Save the trained model, encoder, and preprocessing pipeline using the `pickle` library.  \n",
+    "3. Store the pickled file (`diabetes_model.pkl`) in the deployment folder for easy access.  \n",
+    "4. Load the pickled model during deployment to ensure consistency in preprocessing and predictions.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **2. Reading User Data in Deployment**  \n",
+    "\n",
+    "When a user submits input via the web interface:  \n",
+    "1. The **Flask app** retrieves the form data from `homepage.html`.  \n",
+    "2. The input values are extracted using Flask’s `request.form` method.  \n",
+    "3. The data is converted into a structured format (e.g., a Pandas DataFrame) to match the expected model input.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **3. Preprocessing and Encoding User Data**  \n",
+    "\n",
+    "To ensure the model can correctly interpret user data:  \n",
+    "1. The input data must undergo the **same preprocessing** steps used during training.  \n",
+    "2. The saved **encoder and scaler** are loaded and applied to transform the data.  \n",
+    "3. Categorical features (e.g., `race`, `gender`, `admission_type_id`) are **encoded** using the trained encoder.  \n",
+    "4. Numerical features (e.g., `age`, `num_lab_procedures`, `num_medications`) are **scaled** if required.  \n",
+    "5. The transformed data is prepared in the correct format for model inference.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **4. Making Predictions**  \n",
+    "\n",
+    "1. The **preprocessed user input** is passed to the trained model.  \n",
+    "2. The model outputs a **prediction** (e.g., readmission status).  \n",
+    "3. The result is **converted into a human-readable format** (e.g., \"Not Readmitted\" or \"Readmitted\").  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **5. Displaying the Prediction to the User**  \n",
+    "\n",
+    "1. The prediction result is sent back to `homepage.html`.  \n",
+    "2. The web page dynamically updates to display the **readmission prediction** to the user.  \n",
+    "3. If needed, additional visualizations (e.g., diabetes trends) can be presented.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **6. Ensuring Consistency in Encoding & Processing**  \n",
+    "\n",
+    "1. The preprocessing pipeline used in training (e.g., **OneHotEncoder**, **StandardScaler**) must be applied **exactly the same way** during inference.  \n",
+    "2. To achieve this, the **entire pipeline (encoder + model) is pickled together** and reloaded during deployment.  \n",
+    "3. This guarantees that user input is handled **identically to training data**, avoiding mismatches.  \n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **7. Running the Flask App for Deployment**  \n",
+    "\n",
+    "1. The Flask app is started locally or hosted on a cloud platform like **Heroku, Render, or AWS**.  \n",
+    "2. The user accesses the web app, inputs data, and submits the form.  \n",
+    "3. The Flask app processes the request, makes a prediction, and returns the result.  \n",
+    "4. The deployed model is now accessible to multiple users for real-time diabetes readmission predictions. 🚀  \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
