--- a/Notebooks/Mbego.ipynb
+++ b/Notebooks/Mbego.ipynb
@@ -1949,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1999,7 +1999,7 @@
     "# Save the model to a file using pickle\n",
     "\n",
     "\"\"\"\"\n",
-    "file_path = r'N:\\Moringa\\afterM\\joseline 001\\Diabetes_130-US_Hospitals_1999-2008\\Deployment\\Mbego\\ModelPickle\\best_random_forest_model.pkl.bz2'\n",
+    "file_path = r'N:\\Moringa\\afterM\\joseline 001\\Diabetes_130-US_Hospitals_1999-2008\\Deployment\\Mbego\\ModelPickle\\best_random_forest_model.pkl'\n",
     "\n",
     "# Ensure the directory exists\n",
     "os.makedirs(os.path.dirname(file_path), exist_ok=True)\n",
