modified css,html page

--- a/Notebooks/Mbego.ipynb
+++ b/Notebooks/Mbego.ipynb
@@ -2105,12 +2105,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved successfully with bz2 compression!\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.impute import SimpleImputer\n",
     "import pickle\n",
+    "import bz2\n",
     "\n",
     "# Define selected features\n",
     "selected_features = [\n",
@@ -2118,6 +2127,27 @@
     "    \"diag_1\", \"diag_2\", \"num_medications\", \"diag_3\", \"discharge_disposition_id\",\n",
     "    \"time_in_hospital\", \"age\", \"number_diagnoses\"\n",
     "]\n",
+    "\n",
+    "# Mapping old feature names to new names\n",
+    "feature_mapping = {\n",
+    "    \"encounter_id\": \"Encounter ID\",\n",
+    "    \"patient_nbr\": \"Patient ID\",\n",
+    "    \"number_inpatient\": \"Inpatient visits\",\n",
+    "    \"num_lab_procedures\": \"Lab Procedures\",\n",
+    "    \"diag_1\": \"Primary labtest\",\n",
+    "    \"diag_2\": \"Secondary labtest\",\n",
+    "    \"num_medications\": \"Generic Medications\",\n",
+    "    \"diag_3\": \"Additional Diagnosis\",\n",
+    "    \"discharge_disposition_id\": \"Discharge No\",\n",
+    "    \"time_in_hospital\": \"Hospital Time\",\n",
+    "    \"age\": \"Age\",\n",
+    "    \"number_diagnoses\": \"Diagnosis Total\"\n",
+    "}\n",
+    "\n",
+    "# Rename columns in training data\n",
+    "X_selected = X[selected_features].rename(columns=feature_mapping)\n",
+    "\n",
+    "\n",
     "\n",
     "# Define preprocessing pipeline\n",
     "pipeline = Pipeline([\n",
@@ -2130,11 +2160,15 @@
     "X_selected = X[selected_features]  # Select only relevant features\n",
     "pipeline.fit(X_selected, y)\n",
     "\n",
-    "# Save pipeline\n",
-    "with open(\"ModelPickle/diabetes_pipeline.pkl\", \"wb\") as f:\n",
+    "# Define the model path with bz2 compression\n",
+    "model_path = r\"N:\\Moringa\\afterM\\joseline 001\\Diabetes_130-US_Hospitals_1999-2008\\Deployment\\Mbego\\ModelPickle\\model.pkl.bz2\"\n",
+    "\n",
+    "# Save the model with bz2 compression\n",
+    "with bz2.BZ2File(model_path, \"wb\") as f:\n",
     "    pickle.dump(pipeline, f)\n",
     "\n",
-    "print(\"Pipeline trained and saved successfully!\")\n"
+    "print(\"Model saved successfully with bz2 compression!\")\n",
+    "\n"
    ]
   },
   {
