--- a/Index.ipynb
+++ b/Index.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "       dtype='object'))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "Name: readmitted, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1592,7 @@
        "[101766 rows x 50 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1652,7 @@
        "0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1664,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1674,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +1893,7 @@
        "[5 rows x 44 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1953,7 +1953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1990,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2053,7 +2053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2183,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2274,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2371,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2381,7 +2381,7 @@
        " array([ 3, 12, 12, ...,  5,  1,  1], dtype=int64))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2649,7 +2649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2736,12 +2736,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Categorical columns and numerical columns"
+    "\n",
+    "\n",
+    "<h2 style=\"color:#ffff33; background:black; font-weight:bold; text-align:left; padding:10px;\">\n",
+    "   Categorical columns and numerical columns\n",
+    "</h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2753,7 +2757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2784,7 +2788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -3010,7 +3014,7 @@
        "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3044,7 +3048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3270,7 +3274,7 @@
        "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3284,7 +3288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3293,7 +3297,7 @@
        "(101766, 78)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3305,7 +3309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3408,8 +3412,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<h2 style=\"color:#ffff33; background:black; font-weight:bold; text-align:left; padding:10px;\">\n",
+    "   Removing Unnecessary Columns\n",
+    "</h2>\n",
     "\n",
-    "### **Removing Unnecessary Columns**\n",
+    "\n",
     "\n",
     "#### **1. Identifiers:**  \n",
     "- `encounter_id`, `patient_nbr` – These are unique IDs that don't provide predictive value.\n",
@@ -3423,7 +3430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3649,7 +3656,7 @@
        "[5 rows x 78 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3669,12 +3676,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Splitting"
+    "\n",
+    "<h2 style=\"color:#FF8000; background:black; font-weight:bold; text-transform:uppercase; text-align:left; padding:10px;\">\n",
+    "    DATA SPLITTING\n",
+    "</h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3690,7 +3700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3720,7 +3730,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Handling Class Imbalance\n",
+    "\n",
+    "<h2 style=\"color:#FF8000; background:black; font-weight:bold; text-transform:uppercase; text-align:left; padding:10px;\">\n",
+    "    Handling Class Imbalance\n",
+    "</h2>\n",
     "\n",
     "### Class Imbalance in Target Variable\n",
     "\n",
@@ -3740,7 +3753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3766,14 +3779,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.264257 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.309396 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 962\n",
@@ -3824,14 +3837,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.474885 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.291146 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 962\n",
@@ -3890,33 +3903,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[07:55:17] WARNING: C:\\Users\\Administrator\\workspace\\xgboost-win64_release_1.2.0\\src\\learner.cc:516: \n",
+      "Parameters: { scale_pos_weight } might not be used.\n",
+      "\n",
+      "  This may not be accurate due to some parameters are only used in language bindings but\n",
+      "  passed down to XGBoost core.  Or some parameters are not used but slip through this\n",
+      "  verification. Please open an issue if you find above cases.\n",
+      "\n",
+      "\n",
+      "XGBoost Accuracy: 0.608086862533163\n",
+      "\n",
+      "XGBoost Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.44      0.03      0.06      2272\n",
+      "           1       0.53      0.47      0.50      7109\n",
+      "           2       0.65      0.82      0.72     10973\n",
+      "\n",
+      "    accuracy                           0.61     20354\n",
+      "   macro avg       0.54      0.44      0.43     20354\n",
+      "weighted avg       0.58      0.61      0.57     20354\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# import xgboost as xgb\n",
-    "# from sklearn.metrics import classification_report, accuracy_score\n",
+    "import xgboost as xgb\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
     "\n",
-    "# # Initialize XGBClassifier with class weights\n",
-    "# xgb_model = xgb.XGBClassifier(\n",
-    "#     objective=\"multi:softmax\",  # Multi-class classification\n",
-    "#     num_class=3,  # Number of classes\n",
-    "#     scale_pos_weight=[3.5, 1.2, 0.8],  # Adjust weights for imbalance\n",
-    "#     learning_rate=0.05,  \n",
-    "#     n_estimators=200,  \n",
-    "#     max_depth=6,  \n",
-    "#     random_state=42\n",
-    "# )\n",
+    "# Initialize XGBClassifier with class weights\n",
+    "xgb_model = xgb.XGBClassifier(\n",
+    "    objective=\"multi:softmax\",  # Multi-class classification\n",
+    "    num_class=3,  # Number of classes\n",
+    "    scale_pos_weight=[3.5, 1.2, 0.8],  # Adjust weights for imbalance\n",
+    "    learning_rate=0.05,  \n",
+    "    n_estimators=200,  \n",
+    "    max_depth=6,  \n",
+    "    random_state=42\n",
+    ")\n",
     "\n",
-    "# # Train the model\n",
-    "# xgb_model.fit(X_train, y_train)\n",
+    "# Train the model\n",
+    "xgb_model.fit(X_train, y_train)\n",
     "\n",
-    "# # Make predictions\n",
-    "# y_pred_xgb = xgb_model.predict(X_test)\n",
+    "# Make predictions\n",
+    "y_pred_xgb = xgb_model.predict(X_test)\n",
     "\n",
-    "# # Evaluate performance\n",
-    "# print(\"XGBoost Accuracy:\", accuracy_score(y_test, y_pred_xgb))\n",
-    "# print(\"\\nXGBoost Classification Report:\\n\", classification_report(y_test, y_pred_xgb))\n"
+    "# Evaluate performance\n",
+    "print(\"XGBoost Accuracy:\", accuracy_score(y_test, y_pred_xgb))\n",
+    "print(\"\\nXGBoost Classification Report:\\n\", classification_report(y_test, y_pred_xgb))\n"
    ]
   },
   {
@@ -3928,7 +3969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
