fixing .ipynb errors

--- a/Notebooks/JohnMbego.ipynb
+++ b/Notebooks/JohnMbego.ipynb
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -763,6 +763,7 @@
     }
    ],
    "source": [
+    "\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -1965,12 +1966,11 @@
    ],
    "source": [
     "\n",
-    "\"\"\"\"\"\n",
     "from sklearn.model_selection import train_test_split\n",
-    "import pickle\n",
+    "\n",
     "\n",
     "# Split the data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X_selected, y, test_size=0.2, random_state=42)\n",
     "\n",
     "# Initialize the Random Forest model with the best parameters\n",
     "best_rfc = RandomForestClassifier(\n",
@@ -1998,18 +1998,144 @@
     "    print(\"ROC-AUC Score:\", roc_auc)\n",
     "\n",
     "# Save the model to a file using pickle\n",
-    "with open('best_random_forest_model.pkl', 'wb') as file:\n",
+    "\n",
+    "\"\"\"\"\n",
+    "file_path = r'N:\\Moringa\\afterM\\joseline 001\\Diabetes_130-US_Hospitals_1999-2008\\Deployment\\Mbego\\ModelPickle\\best_random_forest_model.pkl'\n",
+    "\n",
+    "# Ensure the directory exists\n",
+    "os.makedirs(os.path.dirname(file_path), exist_ok=True)\n",
+    "\n",
+    "with open(file_path, 'wb') as file:\n",
     "    pickle.dump(best_rfc, file)\n",
     "\n",
-    "print(\"Model has been pickled and saved as 'best_random_forest_model.pkl'\")\n",
+    "\"\"\"\n",
+    " \n",
     "\n",
-    "\"\"\""
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<hr style=\"border: 1px solid green;\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <span style='color :green'> *Deployment*<span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <span style='color :green'> *Check Feature Importance*<span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import os\n",
+    "import bz2 #for large file git-pushing \n",
+    "\n",
+    "# Load your trained model\n",
+    "model_path = r\"N:\\Moringa\\afterM\\joseline 001\\Diabetes_130-US_Hospitals_1999-2008\\Deployment\\Mbego\\ModelPickle\\best_random_forest_model.pkl.bz2\"\n",
+    "\n",
+    "# Open the compressed file correctly\n",
+    "with bz2.BZ2File(model_path, \"rb\") as f:\n",
+    "    model = pickle.load(f)\n",
+    "    \n",
+    "# loading x_selected used in training for training\n",
+    "important_features = pd.DataFrame({\n",
+    "    \"Feature\": X_selected.columns,\n",
+    "    \"Importance\": model.feature_importances_\n",
+    "}).sort_values(by=\"Importance\", ascending=False)\n",
+    "\n",
+    "# Display top 20 important features\n",
+    "print(important_features.head(12))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating a Pipeline for Preprocessing & Model Training\n",
+    "Since the model will handle new user inputs, we ensure that preprocessing (like., encoding, scaling) is applied consistently."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "import pickle\n",
+    "import bz2\n",
+    "\n",
+    "# Define selected features\n",
+    "selected_features = [\n",
+    "    \"encounter_id\", \"patient_nbr\", \"number_inpatient\", \"num_lab_procedures\",\n",
+    "    \"diag_1\", \"diag_2\", \"num_medications\", \"diag_3\", \"discharge_disposition_id\",\n",
+    "    \"time_in_hospital\", \"age\", \"number_diagnoses\"\n",
+    "]\n",
+    "\n",
+    "# Mapping old feature names to new names\n",
+    "feature_mapping = {\n",
+    "    \"encounter_id\": \"Encounter ID\",\n",
+    "    \"patient_nbr\": \"Patient ID\",\n",
+    "    \"number_inpatient\": \"Inpatient visits\",\n",
+    "    \"num_lab_procedures\": \"Lab Procedures\",\n",
+    "    \"diag_1\": \"Primary labtest\",\n",
+    "    \"diag_2\": \"Secondary labtest\",\n",
+    "    \"num_medications\": \"Generic Medications\",\n",
+    "    \"diag_3\": \"Additional Diagnosis\",\n",
+    "    \"discharge_disposition_id\": \"Discharge No\",\n",
+    "    \"time_in_hospital\": \"Hospital Time\",\n",
+    "    \"age\": \"Age\",\n",
+    "    \"number_diagnoses\": \"Diagnosis Total\"\n",
+    "}\n",
+    "\n",
+    "# Rename columns in training data\n",
+    "X_selected = X[selected_features].rename(columns=feature_mapping)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Define preprocessing pipeline\n",
+    "pipeline = Pipeline([\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"mean\")),  # Handle missing values\n",
+    "    (\"scaler\", StandardScaler()),  # Normalize numeric data\n",
+    "    (\"model\", RandomForestClassifier(n_estimators=100, random_state=42))\n",
+    "])\n",
+    "\n",
+    "# Train the model\n",
+    "X_selected = X[selected_features]  # Select only relevant features\n",
+    "pipeline.fit(X_selected, y)\n",
+    "\n",
+    "# Define the model path with bz2 compression\n",
+    "model_path = r\"N:\\Moringa\\afterM\\joseline 001\\Diabetes_130-US_Hospitals_1999-2008\\Deployment\\Mbego\\ModelPickle\\model.pkl.bz2\"\n",
+    "\n",
+    "# Save the model with bz2 compression\n",
+    "with bz2.BZ2File(model_path, \"wb\") as f:\n",
+    "    pickle.dump(pipeline, f)\n",
+    "\n",
+    "print(\"Model saved successfully with bz2 compression!\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
