--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -2539,6 +2539,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['time_in_hospital', 'num_lab_procedures', 'num_procedures',\n",
+       "       'num_medications', 'number_outpatient', 'number_emergency',\n",
+       "       'number_inpatient', 'number_diagnoses', 'readmitted'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_numerical.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [
@@ -2638,6 +2661,39 @@
    "outputs": [],
    "source": [
     "df_encoded = pd.concat([df_numerical, encoded_df], axis =1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['time_in_hospital', 'num_lab_procedures', 'num_procedures',\n",
+       "       'num_medications', 'number_outpatient', 'number_emergency',\n",
+       "       'number_inpatient', 'number_diagnoses', 'readmitted', 'race_Asian',\n",
+       "       ...\n",
+       "       'diag_3_category_Injury and Poisoning',\n",
+       "       'diag_3_category_Mental Disorders',\n",
+       "       'diag_3_category_Musculoskeletal Diseases', 'diag_3_category_Neoplasms',\n",
+       "       'diag_3_category_Nervous System Disorders',\n",
+       "       'diag_3_category_Pregnancy-Related Conditions',\n",
+       "       'diag_3_category_Respiratory System Diseases',\n",
+       "       'diag_3_category_Skin and Subcutaneous Tissue Diseases',\n",
+       "       'diag_3_category_Symptoms, Signs, and Ill-Defined Conditions',\n",
+       "       'diag_3_category_Unclassified'],\n",
+       "      dtype='object', length=171)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_encoded.columns"
    ]
   },
   {
@@ -3855,6 +3911,493 @@
     "2. The user accesses the web app, inputs data, and submits the form.  \n",
     "3. The Flask app processes the request, makes a prediction, and returns the result.  \n",
     "4. The deployed model is now accessible to multiple users for real-time diabetes readmission predictions. 🚀  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 101766 entries, 0 to 101765\n",
+      "Data columns (total 37 columns):\n",
+      " #   Column                    Non-Null Count   Dtype   \n",
+      "---  ------                    --------------   -----   \n",
+      " 0   race                      101766 non-null  object  \n",
+      " 1   gender                    101766 non-null  object  \n",
+      " 2   age                       101766 non-null  object  \n",
+      " 3   admission_type_id         101766 non-null  category\n",
+      " 4   discharge_disposition_id  101766 non-null  category\n",
+      " 5   admission_source_id       101766 non-null  category\n",
+      " 6   time_in_hospital          101766 non-null  int64   \n",
+      " 7   num_lab_procedures        101766 non-null  int64   \n",
+      " 8   num_procedures            101766 non-null  int64   \n",
+      " 9   num_medications           101766 non-null  int64   \n",
+      " 10  number_outpatient         101766 non-null  int64   \n",
+      " 11  number_emergency          101766 non-null  int64   \n",
+      " 12  number_inpatient          101766 non-null  int64   \n",
+      " 13  number_diagnoses          101766 non-null  int64   \n",
+      " 14  max_glu_serum             101766 non-null  object  \n",
+      " 15  A1Cresult                 101766 non-null  object  \n",
+      " 16  metformin                 101766 non-null  object  \n",
+      " 17  repaglinide               101766 non-null  object  \n",
+      " 18  nateglinide               101766 non-null  object  \n",
+      " 19  chlorpropamide            101766 non-null  object  \n",
+      " 20  glimepiride               101766 non-null  object  \n",
+      " 21  glipizide                 101766 non-null  object  \n",
+      " 22  glyburide                 101766 non-null  object  \n",
+      " 23  tolbutamide               101766 non-null  object  \n",
+      " 24  pioglitazone              101766 non-null  object  \n",
+      " 25  rosiglitazone             101766 non-null  object  \n",
+      " 26  acarbose                  101766 non-null  object  \n",
+      " 27  miglitol                  101766 non-null  object  \n",
+      " 28  tolazamide                101766 non-null  object  \n",
+      " 29  insulin                   101766 non-null  object  \n",
+      " 30  glyburide-metformin       101766 non-null  object  \n",
+      " 31  change                    101766 non-null  object  \n",
+      " 32  diabetesMed               101766 non-null  object  \n",
+      " 33  readmitted                101766 non-null  int64   \n",
+      " 34  diag_1_category           101766 non-null  object  \n",
+      " 35  diag_2_category           101766 non-null  object  \n",
+      " 36  diag_3_category           101766 non-null  object  \n",
+      "dtypes: category(3), int64(9), object(25)\n",
+      "memory usage: 26.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Caucasian          76099\n",
+      "AfricanAmerican    19210\n",
+      "unknown             2273\n",
+      "Hispanic            2037\n",
+      "Other               1506\n",
+      "Asian                641\n",
+      "Name: race, dtype: int64\n",
+      "Female             54708\n",
+      "Male               47055\n",
+      "Unknown/Invalid        3\n",
+      "Name: gender, dtype: int64\n",
+      "[70-80)     26068\n",
+      "[60-70)     22483\n",
+      "[50-60)     17256\n",
+      "[80-90)     17197\n",
+      "[40-50)      9685\n",
+      "[30-40)      3775\n",
+      "[90-100)     2793\n",
+      "[20-30)      1657\n",
+      "[10-20)       691\n",
+      "[0-10)        161\n",
+      "Name: age, dtype: int64\n",
+      "1    53990\n",
+      "3    18869\n",
+      "2    18480\n",
+      "6     5291\n",
+      "5     4785\n",
+      "8      320\n",
+      "7       21\n",
+      "4       10\n",
+      "Name: admission_type_id, dtype: int64\n",
+      "1     60234\n",
+      "3     13954\n",
+      "6     12902\n",
+      "18     3691\n",
+      "2      2128\n",
+      "22     1993\n",
+      "11     1642\n",
+      "5      1184\n",
+      "25      989\n",
+      "4       815\n",
+      "7       623\n",
+      "23      412\n",
+      "13      399\n",
+      "14      372\n",
+      "28      139\n",
+      "8       108\n",
+      "15       63\n",
+      "24       48\n",
+      "9        21\n",
+      "17       14\n",
+      "16       11\n",
+      "19        8\n",
+      "10        6\n",
+      "27        5\n",
+      "12        3\n",
+      "20        2\n",
+      "Name: discharge_disposition_id, dtype: int64\n",
+      "7     57494\n",
+      "1     29565\n",
+      "17     6781\n",
+      "4      3187\n",
+      "6      2264\n",
+      "2      1104\n",
+      "5       855\n",
+      "3       187\n",
+      "20      161\n",
+      "9       125\n",
+      "8        16\n",
+      "22       12\n",
+      "10        8\n",
+      "11        2\n",
+      "14        2\n",
+      "25        2\n",
+      "13        1\n",
+      "Name: admission_source_id, dtype: int64\n",
+      "3     17756\n",
+      "2     17224\n",
+      "1     14208\n",
+      "4     13924\n",
+      "5      9966\n",
+      "6      7539\n",
+      "7      5859\n",
+      "8      4391\n",
+      "9      3002\n",
+      "10     2342\n",
+      "11     1855\n",
+      "12     1448\n",
+      "13     1210\n",
+      "14     1042\n",
+      "Name: time_in_hospital, dtype: int64\n",
+      "1      3208\n",
+      "43     2804\n",
+      "44     2496\n",
+      "45     2376\n",
+      "38     2213\n",
+      "       ... \n",
+      "107       1\n",
+      "118       1\n",
+      "129       1\n",
+      "120       1\n",
+      "121       1\n",
+      "Name: num_lab_procedures, Length: 118, dtype: int64\n",
+      "0    46652\n",
+      "1    20742\n",
+      "2    12717\n",
+      "3     9443\n",
+      "6     4954\n",
+      "4     4180\n",
+      "5     3078\n",
+      "Name: num_procedures, dtype: int64\n",
+      "13    6086\n",
+      "12    6004\n",
+      "11    5795\n",
+      "15    5792\n",
+      "14    5707\n",
+      "      ... \n",
+      "70       2\n",
+      "75       2\n",
+      "74       1\n",
+      "79       1\n",
+      "81       1\n",
+      "Name: num_medications, Length: 75, dtype: int64\n",
+      "0     85027\n",
+      "1      8547\n",
+      "2      3594\n",
+      "3      2042\n",
+      "4      1099\n",
+      "5       533\n",
+      "6       303\n",
+      "7       155\n",
+      "8        98\n",
+      "9        83\n",
+      "10       57\n",
+      "11       42\n",
+      "13       31\n",
+      "12       30\n",
+      "14       28\n",
+      "15       20\n",
+      "16       15\n",
+      "17        8\n",
+      "21        7\n",
+      "20        7\n",
+      "22        5\n",
+      "18        5\n",
+      "19        3\n",
+      "24        3\n",
+      "27        3\n",
+      "23        2\n",
+      "25        2\n",
+      "26        2\n",
+      "29        2\n",
+      "33        2\n",
+      "35        2\n",
+      "36        2\n",
+      "40        1\n",
+      "28        1\n",
+      "34        1\n",
+      "37        1\n",
+      "38        1\n",
+      "39        1\n",
+      "42        1\n",
+      "Name: number_outpatient, dtype: int64\n",
+      "0     90383\n",
+      "1      7677\n",
+      "2      2042\n",
+      "3       725\n",
+      "4       374\n",
+      "5       192\n",
+      "6        94\n",
+      "7        73\n",
+      "8        50\n",
+      "10       34\n",
+      "9        33\n",
+      "11       23\n",
+      "13       12\n",
+      "12       10\n",
+      "22        6\n",
+      "18        5\n",
+      "16        5\n",
+      "19        4\n",
+      "20        4\n",
+      "14        3\n",
+      "15        3\n",
+      "21        2\n",
+      "25        2\n",
+      "76        1\n",
+      "54        1\n",
+      "24        1\n",
+      "28        1\n",
+      "29        1\n",
+      "37        1\n",
+      "42        1\n",
+      "46        1\n",
+      "64        1\n",
+      "63        1\n",
+      "Name: number_emergency, dtype: int64\n",
+      "0     67630\n",
+      "1     19521\n",
+      "2      7566\n",
+      "3      3411\n",
+      "4      1622\n",
+      "5       812\n",
+      "6       480\n",
+      "7       268\n",
+      "8       151\n",
+      "9       111\n",
+      "10       61\n",
+      "11       49\n",
+      "12       34\n",
+      "13       20\n",
+      "14       10\n",
+      "15        9\n",
+      "16        6\n",
+      "19        2\n",
+      "17        1\n",
+      "18        1\n",
+      "21        1\n",
+      "Name: number_inpatient, dtype: int64\n",
+      "9     49474\n",
+      "5     11393\n",
+      "8     10616\n",
+      "7     10393\n",
+      "6     10161\n",
+      "4      5537\n",
+      "3      2835\n",
+      "2      1023\n",
+      "1       219\n",
+      "16       45\n",
+      "10       17\n",
+      "13       16\n",
+      "11       11\n",
+      "15       10\n",
+      "12        9\n",
+      "14        7\n",
+      "Name: number_diagnoses, dtype: int64\n",
+      "None    96420\n",
+      "Norm     2597\n",
+      ">200     1485\n",
+      ">300     1264\n",
+      "Name: max_glu_serum, dtype: int64\n",
+      "None    84748\n",
+      ">8       8216\n",
+      "Norm     4990\n",
+      ">7       3812\n",
+      "Name: A1Cresult, dtype: int64\n",
+      "No        81778\n",
+      "Steady    18346\n",
+      "Up         1067\n",
+      "Down        575\n",
+      "Name: metformin, dtype: int64\n",
+      "No        100227\n",
+      "Steady      1384\n",
+      "Up           110\n",
+      "Down          45\n",
+      "Name: repaglinide, dtype: int64\n",
+      "No        101063\n",
+      "Steady       668\n",
+      "Up            24\n",
+      "Down          11\n",
+      "Name: nateglinide, dtype: int64\n",
+      "No        101680\n",
+      "Steady        79\n",
+      "Up             6\n",
+      "Down           1\n",
+      "Name: chlorpropamide, dtype: int64\n",
+      "No        96575\n",
+      "Steady     4670\n",
+      "Up          327\n",
+      "Down        194\n",
+      "Name: glimepiride, dtype: int64\n",
+      "No        89080\n",
+      "Steady    11356\n",
+      "Up          770\n",
+      "Down        560\n",
+      "Name: glipizide, dtype: int64\n",
+      "No        91116\n",
+      "Steady     9274\n",
+      "Up          812\n",
+      "Down        564\n",
+      "Name: glyburide, dtype: int64\n",
+      "No        101743\n",
+      "Steady        23\n",
+      "Name: tolbutamide, dtype: int64\n",
+      "No        94438\n",
+      "Steady     6976\n",
+      "Up          234\n",
+      "Down        118\n",
+      "Name: pioglitazone, dtype: int64\n",
+      "No        95401\n",
+      "Steady     6100\n",
+      "Up          178\n",
+      "Down         87\n",
+      "Name: rosiglitazone, dtype: int64\n",
+      "No        101458\n",
+      "Steady       295\n",
+      "Up            10\n",
+      "Down           3\n",
+      "Name: acarbose, dtype: int64\n",
+      "No        101728\n",
+      "Steady        31\n",
+      "Down           5\n",
+      "Up             2\n",
+      "Name: miglitol, dtype: int64\n",
+      "No        101727\n",
+      "Steady        38\n",
+      "Up             1\n",
+      "Name: tolazamide, dtype: int64\n",
+      "No        47383\n",
+      "Steady    30849\n",
+      "Down      12218\n",
+      "Up        11316\n",
+      "Name: insulin, dtype: int64\n",
+      "No        101060\n",
+      "Steady       692\n",
+      "Up             8\n",
+      "Down           6\n",
+      "Name: glyburide-metformin, dtype: int64\n",
+      "No    54755\n",
+      "Ch    47011\n",
+      "Name: change, dtype: int64\n",
+      "Yes    78363\n",
+      "No     23403\n",
+      "Name: diabetesMed, dtype: int64\n",
+      "0    54864\n",
+      "1    35545\n",
+      "2    11357\n",
+      "Name: readmitted, dtype: int64\n",
+      "Circulatory System Diseases                    30336\n",
+      "Endocrine, Nutritional, and Metabolic          11459\n",
+      "Respiratory System Diseases                    10407\n",
+      "Digestive System Diseases                       9208\n",
+      "Symptoms, Signs, and Ill-Defined Conditions     7636\n",
+      "Injury and Poisoning                            6975\n",
+      "Genitourinary Diseases                          5078\n",
+      "Musculoskeletal Diseases                        4957\n",
+      "Infectious and Parasitic Diseases               4412\n",
+      "Neoplasms                                       3433\n",
+      "Skin and Subcutaneous Tissue Diseases           2530\n",
+      "Mental Disorders                                2262\n",
+      "Nervous System Disorders                        1211\n",
+      "Blood Diseases                                  1103\n",
+      "Pregnancy-Related Conditions                     687\n",
+      "Congenital Anomalies                              51\n",
+      "Unclassified                                      21\n",
+      "Name: diag_1_category, dtype: int64\n",
+      "Circulatory System Diseases                    31365\n",
+      "Endocrine, Nutritional, and Metabolic          21017\n",
+      "Respiratory System Diseases                    10251\n",
+      "Genitourinary Diseases                          7987\n",
+      "Symptoms, Signs, and Ill-Defined Conditions     4632\n",
+      "Digestive System Diseases                       3962\n",
+      "Infectious and Parasitic Diseases               3736\n",
+      "Skin and Subcutaneous Tissue Diseases           3596\n",
+      "Injury and Poisoning                            3159\n",
+      "Blood Diseases                                  2926\n",
+      "Mental Disorders                                2657\n",
+      "Neoplasms                                       2547\n",
+      "Musculoskeletal Diseases                        1764\n",
+      "Nervous System Disorders                        1286\n",
+      "Pregnancy-Related Conditions                     415\n",
+      "Unclassified                                     358\n",
+      "Congenital Anomalies                             108\n",
+      "Name: diag_2_category, dtype: int64\n",
+      "Circulatory System Diseases                    29918\n",
+      "Endocrine, Nutritional, and Metabolic          26308\n",
+      "Respiratory System Diseases                     6774\n",
+      "Genitourinary Diseases                          6327\n",
+      "Infectious and Parasitic Diseases               5675\n",
+      "Symptoms, Signs, and Ill-Defined Conditions     4523\n",
+      "Digestive System Diseases                       3572\n",
+      "Injury and Poisoning                            3190\n",
+      "Mental Disorders                                3136\n",
+      "Blood Diseases                                  2490\n",
+      "Skin and Subcutaneous Tissue Diseases           2488\n",
+      "Musculoskeletal Diseases                        1915\n",
+      "Neoplasms                                       1856\n",
+      "Nervous System Disorders                        1766\n",
+      "Unclassified                                    1423\n",
+      "Pregnancy-Related Conditions                     309\n",
+      "Congenital Anomalies                              96\n",
+      "Name: diag_3_category, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['A1Cresult'].value_counts()\n",
+    "for column in df.columns:\n",
+    "    print(df[column].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Deployment\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## saving model and encoder\n",
+    "\n",
+    "import pickle\n",
+    "\n",
+    "filename = \"../Deployment/Leo/diabetes_model.pkl\"\n",
+    "\n",
+    "# Save both the model and encoder in a dictionary\n",
+    "with open(filename, \"wb\") as file:\n",
+    "    pickle.dump({\"model\": best_xgb, \"encoder\": ohe}, file)\n",
+    "\n",
+    "\n"
    ]
   },
   {
