debug deployment, feature mismatch

--- a/Notebooks/leo.ipynb
+++ b/Notebooks/leo.ipynb
@@ -4415,6 +4415,146 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time_in_hospital\n",
+      "num_lab_procedures\n",
+      "num_procedures\n",
+      "num_medications\n",
+      "number_outpatient\n",
+      "number_emergency\n",
+      "number_inpatient\n",
+      "number_diagnoses\n",
+      "readmitted\n",
+      "race_Asian\n",
+      "race_Caucasian\n",
+      "race_Hispanic\n",
+      "race_Other\n",
+      "race_unknown\n",
+      "gender_Male\n",
+      "gender_Unknown/Invalid\n",
+      "age_[10-20)\n",
+      "age_[20-30)\n",
+      "age_[30-40)\n",
+      "age_[40-50)\n",
+      "age_[50-60)\n",
+      "age_[60-70)\n",
+      "age_[70-80)\n",
+      "age_[80-90)\n",
+      "age_[90-100)\n",
+      "max_glu_serum_>300\n",
+      "max_glu_serum_None\n",
+      "max_glu_serum_Norm\n",
+      "A1Cresult_>8\n",
+      "A1Cresult_None\n",
+      "A1Cresult_Norm\n",
+      "metformin_No\n",
+      "metformin_Steady\n",
+      "metformin_Up\n",
+      "repaglinide_No\n",
+      "repaglinide_Steady\n",
+      "repaglinide_Up\n",
+      "nateglinide_No\n",
+      "nateglinide_Steady\n",
+      "nateglinide_Up\n",
+      "chlorpropamide_No\n",
+      "chlorpropamide_Steady\n",
+      "chlorpropamide_Up\n",
+      "glimepiride_No\n",
+      "glimepiride_Steady\n",
+      "glimepiride_Up\n",
+      "glipizide_No\n",
+      "glipizide_Steady\n",
+      "glipizide_Up\n",
+      "glyburide_No\n",
+      "glyburide_Steady\n",
+      "glyburide_Up\n",
+      "tolbutamide_Steady\n",
+      "pioglitazone_No\n",
+      "pioglitazone_Steady\n",
+      "pioglitazone_Up\n",
+      "rosiglitazone_No\n",
+      "rosiglitazone_Steady\n",
+      "rosiglitazone_Up\n",
+      "acarbose_No\n",
+      "acarbose_Steady\n",
+      "acarbose_Up\n",
+      "miglitol_No\n",
+      "miglitol_Steady\n",
+      "miglitol_Up\n",
+      "tolazamide_Steady\n",
+      "tolazamide_Up\n",
+      "insulin_No\n",
+      "insulin_Steady\n",
+      "insulin_Up\n",
+      "glyburide-metformin_No\n",
+      "glyburide-metformin_Steady\n",
+      "glyburide-metformin_Up\n",
+      "change_No\n",
+      "diabetesMed_Yes\n",
+      "diag_1_category_Circulatory System Diseases\n",
+      "diag_1_category_Congenital Anomalies\n",
+      "diag_1_category_Digestive System Diseases\n",
+      "diag_1_category_Endocrine, Nutritional, and Metabolic\n",
+      "diag_1_category_Genitourinary Diseases\n",
+      "diag_1_category_Infectious and Parasitic Diseases\n",
+      "diag_1_category_Injury and Poisoning\n",
+      "diag_1_category_Mental Disorders\n",
+      "diag_1_category_Musculoskeletal Diseases\n",
+      "diag_1_category_Neoplasms\n",
+      "diag_1_category_Nervous System Disorders\n",
+      "diag_1_category_Pregnancy-Related Conditions\n",
+      "diag_1_category_Respiratory System Diseases\n",
+      "diag_1_category_Skin and Subcutaneous Tissue Diseases\n",
+      "diag_1_category_Symptoms, Signs, and Ill-Defined Conditions\n",
+      "diag_1_category_Unclassified\n",
+      "diag_2_category_Circulatory System Diseases\n",
+      "diag_2_category_Congenital Anomalies\n",
+      "diag_2_category_Digestive System Diseases\n",
+      "diag_2_category_Endocrine, Nutritional, and Metabolic\n",
+      "diag_2_category_Genitourinary Diseases\n",
+      "diag_2_category_Infectious and Parasitic Diseases\n",
+      "diag_2_category_Injury and Poisoning\n",
+      "diag_2_category_Mental Disorders\n",
+      "diag_2_category_Musculoskeletal Diseases\n",
+      "diag_2_category_Neoplasms\n",
+      "diag_2_category_Nervous System Disorders\n",
+      "diag_2_category_Pregnancy-Related Conditions\n",
+      "diag_2_category_Respiratory System Diseases\n",
+      "diag_2_category_Skin and Subcutaneous Tissue Diseases\n",
+      "diag_2_category_Symptoms, Signs, and Ill-Defined Conditions\n",
+      "diag_2_category_Unclassified\n",
+      "diag_3_category_Circulatory System Diseases\n",
+      "diag_3_category_Congenital Anomalies\n",
+      "diag_3_category_Digestive System Diseases\n",
+      "diag_3_category_Endocrine, Nutritional, and Metabolic\n",
+      "diag_3_category_Genitourinary Diseases\n",
+      "diag_3_category_Infectious and Parasitic Diseases\n",
+      "diag_3_category_Injury and Poisoning\n",
+      "diag_3_category_Mental Disorders\n",
+      "diag_3_category_Musculoskeletal Diseases\n",
+      "diag_3_category_Neoplasms\n",
+      "diag_3_category_Nervous System Disorders\n",
+      "diag_3_category_Pregnancy-Related Conditions\n",
+      "diag_3_category_Respiratory System Diseases\n",
+      "diag_3_category_Skin and Subcutaneous Tissue Diseases\n",
+      "diag_3_category_Symptoms, Signs, and Ill-Defined Conditions\n",
+      "diag_3_category_Unclassified\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in df_encoded.columns:\n",
+    "    print(col)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
